--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "arcaptcha-vue3": "^0.4.0",
     "vue": "^3.5.12",
     "vue-router": "4.4.5"
   },
