--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "devtwin",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "vue": "^3.5.21",
-    "vue-router": "4.5.1"
+    "framer-motion": "^11.0.17",
+    "next": "14.2.16",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.7"
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.6",
+    "@types/react-dom": "^18.3.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.16",
+    "typescript": "^5.6.3"
   }
 }
